# tickets.rs

./: .gitignore  CODEOWNERS  Cargo.toml
.cargo/: config  (+1 more)
bot-list-updater/: Cargo.toml  Dockerfile  envvars.md
bot-list-updater/src/: config.rs  error.rs  lib.rs  main.rs
bot-list-updater/src/retriever/: mod.rs
bot-list-updater/src/updater/: dbl_updater.rs  discord_boats_updater.rs  mod.rs
cache/: Cargo.toml  sqlx-data.json
cache-server/: Cargo.toml
cache-server/src/: lib.rs  response.rs  server.rs
cache-server/src/endpoints/: mod.rs
cache-sync-service/: Cargo.toml  Dockerfile
cache-sync-service/src/: config.rs  error.rs  lib.rs  main.rs
cache-sync-service/src/processor/: manager.rs  mod.rs  worker.rs
cache/src/: cache.rs  error.rs  lib.rs  memory.rs  options.rs  postgres.rs
cache/src/client/: mod.rs
cache/src/model/: channel.rs  emoji.rs  entity_maps.rs  guild.rs  guild_state.rs  member.rs  mod.rs  role.rs  user.rs
cache/src/postgres/: mod.rs  payload.rs  postgres.rs  postgres_cache.rs  worker.rs
common/: Cargo.toml
common/src/: lib.rs  prometheus_server.rs
common/src/event_forwarding/: command.rs  event.rs  interaction.rs  mod.rs
common/src/status_updates/: mod.rs  status_update.rs
common/src/token_change/: mod.rs
database/: Cargo.toml
database/src/: database.rs  lib.rs  table.rs  whitelabel.rs  whitelabel_error.rs  whitelabel_guilds.rs  whitelabel_keys.rs  whitelabel_status.rs
event-router/: Cargo.toml
event-router/src/: error.rs  lib.rs  pool.rs
event-router/src/k8s/: client.rs  mod.rs  pod.rs  pod_update.rs
http-gateway/: Cargo.toml  Dockerfile
http-gateway/src/: config.rs  error.rs  lib.rs  main.rs
http-gateway/src/http/: handle.rs  mod.rs  response.rs  server.rs
image-proxy/: Cargo.toml
image-proxy/src/: config.rs  lib.rs
image-proxy/src/http/: custom_rejection.rs  mod.rs  proxy.rs  server.rs  used_token_store.rs
model/: Cargo.toml
model/src/: discriminator.rs  image_hash.rs  lib.rs  permission_bit_set.rs  snowflake.rs  util.rs
model/src/channel/: channel.rs  channel_type.rs  mod.rs  permission.rs  permission_overwrite.rs  reaction.rs  thread_member.rs  thread_metadata.rs  video_quality_mode.rs
model/src/channel/message/: allowed_mentions.rs  embed.rs  message.rs  mod.rs
model/src/guild/: emoji.rs  guild.rs  join_request.rs  member.rs  mod.rs  role.rs  unavailable_guild.rs  voice_state.rs
model/src/interaction/: action_row.rs  application_command.rs  application_command_interaction_data.rs  application_command_interaction_data_option.rs  application_command_interaction_data_resolved.rs  application_command_option.rs  application_command_option_choice.rs  application_command_type.rs  button.rs  component.rs  guild_application_command_permissions.rs  input_text.rs  interaction.rs  interaction_application_command_callback_data.rs  interaction_response.rs  mod.rs  select_menu.rs
model/src/stage/: mod.rs  stage_instance.rs
model/src/sticker/: format_type.rs  mod.rs  sticker_item.rs  sticker_pack.rs  sticker_type.rs
model/src/user/: activity.rs  activity_emoji.rs  activity_type.rs  assets.rs  client_status.rs  mod.rs  party.rs  premium_type.rs  presence_update.rs  secrets.rs  status_type.rs  status_update.rs  timestamps.rs  user.rs
patreon-proxy/: Cargo.toml  Dockerfile  envvars.md
patreon-proxy/src/: config.rs  error.rs  http.rs  lib.rs  main.rs
patreon-proxy/src/database/: database.rs  mod.rs  tokens.rs
patreon-proxy/src/database/sql/patreon_keys/: get_tokens.sql  insert_tokens.sql  schema.sql
patreon-proxy/src/error/: error.rs  mod.rs
patreon-proxy/src/http/: mod.rs  server.rs
patreon-proxy/src/patreon/: entitlement.rs  mod.rs  models.rs  oauth.rs  poller.rs  tier.rs
patreon-proxy/src/patreon/ratelimiter/: governor_ratelimiter.rs  mod.rs
secure-proxy/: Cargo.toml  envvars.md
secure-proxy/src/: config.rs  lib.rs
secure-proxy/src/http/: custom_rejection.rs  mod.rs  proxy.rs  server.rs
server-counter/: Cargo.toml  envvars.md
server-counter/src/: error.rs  lib.rs
server-counter/src/config/: mod.rs
server-counter/src/http/: mod.rs  response.rs  server.rs
server-counter/src/http/routes/: mod.rs  prometheus.rs  total.rs
sharder/: Cargo.toml  entrypoint.sh  envvars.md  main.Dockerfile  whitelabel.Dockerfile
sharder/src/: builders.rs  config.rs  lib.rs  main.rs  metrics_server.rs  shard.rs  util.rs
sharder/src/gateway/: close_event.rs  error.rs  guild_state.rs  http.rs  intents.rs  internal_command.rs  mod.rs  outbound_message.rs  shard.rs  shard_identifier.rs  shardinfo.rs  timer.rs  util.rs  whitelabel_utils.rs  worker_response.rs
sharder/src/gateway/event_forwarding/: event_forwarder.rs  http.rs  kafka.rs  mod.rs  util.rs
sharder/src/gateway/payloads/: dispatch.rs  heartbeat.rs  heartbeat_ack.rs  hello.rs  identify.rs  invalid_session.rs  mod.rs  opcode.rs  parser.rs  payload.rs  presence_update.rs  reconnect.rs  resume.rs
sharder/src/gateway/session_store/: mod.rs  redis_store.rs
sharder/src/manager/: fatal_error.rs  mod.rs  options.rs  public_shard_manager.rs  shard_manager.rs  whitelabel_shard_manager.rs
sharder/src/model/: discriminator.rs  image_hash.rs  mod.rs  permission_bit_set.rs  snowflake.rs
sharder/src/model/channel/: channel.rs  channel_type.rs  mod.rs  permission_overwrite.rs  reaction.rs
sharder/src/model/guild/: emoji.rs  guild.rs  member.rs  role.rs  unavailable_guild.rs  voice_state.rs
sharder/src/model/user/: activity.rs  activity_emoji.rs  activity_type.rs  activityemoji.rs  assets.rs  client_status.rs  mod.rs  premium_type.rs  presence_update.rs  statustype.rs  statusupdate.rs  timestamps.rs  user.rs
vote_listener/: Cargo.toml  envvars.md
vote_listener/src/: envvars.md  error.rs  lib.rs
vote_listener/src/config/: config.rs  mod.rs
vote_listener/src/database/: database.rs  mod.rs
vote_listener/src/http/: mod.rs  response.rs  server.rs
vote_listener/src/http/extractors/: auth_token_extractor.rs  mod.rs
vote_listener/src/http/response/: error.rs  mod.rs
vote_listener/src/http/routes/: index.rs  mod.rs  vote_dbl.rs
(+26 files in other folders)
