[package]
name = "bot_list_updater"
version = "0.1.0"
authors = ["rxdn"]
edition = "2018"

[dependencies]
tokio = { version = "~1", features = ["full"] }
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json", "gzip"] }
envy = "0.4"
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"
log = "0.4"
env_logger = "0.9"
