[package]
name = "cache-server"
version = "0.1.0"
edition = "2018"

[dependencies]
model = { path = "../model" }
cache = { path = "../cache", default-features = false, features = ["memory"] }
tokio = { version = "1", features = ["full"] }
axum = "0.2"
hyper = { version = "0.14", features = ["http1", "http2", "server", "runtime", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
envy = "0.4"
log = "0.4"
env_logger = "0.9"
