[package]
name = "cache"
version = "0.1.0"
authors = ["rxdn"]
edition = "2018"

[dependencies]
model = { path = "../model" }
tokio = { version = "~1", features = ["full"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
tokio-postgres = { version = "^0.7", features = ["with-chrono-0_4", "with-serde_json-1"], optional = true }
dashmap = { version = "5", optional = true }
tracing = "0.1"
prometheus = { version = "0.13", optional = true }
lazy_static = { version = "1.4", optional = true }
backoff = { version = "0.3", features = ["tokio"] }

[features]
default = ["postgres", "metrics"]
cache-model = ["dashmap"]
postgres = ["tokio-postgres"]
memory = ["cache-model"]
metrics = ["prometheus", "lazy_static"]