[package]
name = "database"
version = "0.1.0"
authors = ["rxdn"]
edition = "2018"

[dependencies]
model = { path = "../model" }
tokio = { version = "0.2", features = ["full", "time", "sync"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.4.0-beta.1", features = ["macros", "runtime-tokio", "postgres", "chrono", "json"], default-features = false }
async-trait = "0.1"