[package]
name = "database"
version = "0.1.0"
authors = ["rxdn"]
edition = "2018"

[dependencies]
model = { path = "../model" }
tokio = { version = "1.2", features = ["full"] }
futures = "0.3"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.5", features = ["macros", "runtime-tokio-rustls", "postgres", "chrono", "json"], default-features = false }
async-trait = "0.1"