[package]
name = "http-gateway"
version = "0.1.0"
authors = ["rxdn"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["full"] }
warp = { version = "0.2", default-features = false }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
model = { path = "../model" }
common = { path = "../common" }
database = { path = "../database" }
ed25519-dalek = "1.0"
hex = "0.4"
sqlx = { version = "0.4.0-beta.1", features = ["macros", "runtime-tokio", "postgres", "chrono", "json"], default-features = false }
reqwest = { version = "0.10", features = ["json", "gzip", "cookies"] }