[package]
name = "http-gateway"
version = "0.1.0"
authors = ["rxdn"]
edition = "2018"

[dependencies]
tokio = { version = "1.2", features = ["full"] }
warp = { version = "0.3", default-features = false }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
model = { path = "../model" }
common = { path = "../common" }
database = { path = "../database" }
ed25519-dalek = "1.0"
hex = "0.4"
sqlx = { version = "0.5", features = ["macros", "runtime-tokio-rustls", "postgres", "chrono", "json"], default-features = false }
reqwest = { version = "0.11", features = ["json", "gzip"] }

[features]
sticky-cookie = ["reqwest/cookies"]