[package]
name = "http-gateway"
version = "0.1.0"
authors = ["rxdn"]
edition = "2018"

[dependencies]
tokio = { version = "~1", features = ["full"] }
warp = { version = "0.3", default-features = false }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
model = { path = "../model" }
common = { path = "../common" }
database = { path = "../database" }
cache = { path = "../cache" }
ed25519-dalek = "1.0"
hex = "0.4"
sqlx = { version = "0.7", features = ["macros", "runtime-tokio-native-tls", "postgres", "chrono", "json"], default-features = false } # rustls doesn't support IP addresses
reqwest = { version = "0.11", features = ["json", "gzip"] }
envy = "0.4"
