[package]
name = "image-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.5" }
tower = "0.4"
tower-http = { version = "0.3", features = ["cors", "compression-full", "decompression-full"] }
jwt = "0.16"
hmac = "0.12"
sha2 = "0.10"
url = "2"
reqwest = { version = "0.11", features = ["gzip"] }
mime = "0.3"
serde = { version = "1.0", features = ["derive"] }
envy = "0.4"
log = "0.4"
env_logger = "0.9"
clap = { version = "3", features = ["derive"], optional = true } # generator only

[features]
default = []
generator = ["clap"]

[[bin]]
name = "main"

[[bin]]
name = "generator"
required-features = ["generator"]
