[package]
name = "model"
version = "0.1.0"
authors = ["rxdn"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_repr = "0.1"
chrono = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
num-derive = "0.3"
