[package]
name = "patreon-proxy"
version = "0.1.0"
authors = ["rxdn"]
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
warp = { version = "0.3", default-features = false }
rustls = "0.20"
log = "0.4"
env_logger = "0.9"
parking_lot = "0.12"
