[package]
name = "patreon-proxy"
version = "0.1.0"
authors = ["rxdn"]
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde-enum-str = "0.4"
serde_json = "1"
warp = { version = "0.3", default-features = false }
rustls = "0.21"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
sentry = "0.31"
sentry-tracing = "0.31"
envy = "0.4"
deadpool-postgres = "0.10"
url = "2"