[package]
name = "sharder"
version = "0.1.0"
authors = ["rxdn"]
edition = "2018"
default-run = "public"

[dependencies]
cache = { path = "../cache" }
model = { path = "../model" }
common = { path = "../common" }
database = { path = "../database" }
tokio = { version = "1", features = ["full", "time", "sync", "signal"] }
tokio-tungstenite = { version = "0.17", features = ["rustls-tls-webpki-roots"] }
webpki = "0.22"
url = "2.2"
futures = "0.3"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_repr = "0.1"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
redis = { version = "0.21", features = ["tokio-comp", "connection-manager"] }
deadpool = { version = "0.9", features = ["managed"] }
deadpool-redis = "0.10"
jemallocator = "0.5"
reqwest = { version = "0.11", features = ["json", "rustls-tls-webpki-roots"] }
flate2 = { version = "1.0", features = ["tokio", "zlib-ng-compat"], default-features = false, optional = true }
log = "0.4"
env_logger = "0.9"
envy = "0.4"
sentry = { version = "0.27", features = ["log"], optional = true }
sentry-log = { version = "0.27", optional = true }
parking_lot = "0.12"

[features]
default = ["skip-initial-guild-creates", "use-sentry"]
compression = ["flate2", "reqwest/gzip"]
whitelabel = []
skip-initial-guild-creates = []
use-sentry = ["sentry", "sentry-log"]

[[bin]]
name = "public"

[[bin]]
name = "whitelabel"
required-features = ["whitelabel"]