[package]
name = "sharder"
version = "0.1.0"
authors = ["rxdn"]
edition = "2018"
default-run = "public"

[dependencies]
cache = { path = "../cache" }
model = { path = "../model" }
common = { path = "../common" }
database = { path = "../database" }
tokio = { version = "1", features = ["full", "time", "sync", "signal"] }
tokio-tungstenite = { version = "0.17", features = ["rustls-tls-webpki-roots"] }
webpki = "0.22"
url = "2.2"
futures = "0.3"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_repr = "0.1"
simd-json = { version = "0.7", features = ["allow-non-simd"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
#redis = { version = "0.21", features = ["tokio-comp", "connection-manager"] }
deadpool = { version = "0.9", features = ["managed"] }
deadpool-redis = "0.11"
jemallocator = "0.5"
reqwest = { version = "0.11", features = ["json", "rustls-tls-webpki-roots"] }
flate2 = { version = "1.0", features = ["tokio", "zlib-ng-compat"], default-features = false, optional = true }
envy = "0.4"
sentry = { version = "0.29", features = ["log"], optional = true }
sentry-tracing = { version = "0.29", optional = true }
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["skip-initial-guild-creates", "use-sentry"]
compression = ["flate2", "reqwest/gzip"]
whitelabel = []
skip-initial-guild-creates = []
use-sentry = ["sentry", "sentry-tracing"]

[[bin]]
name = "public"

[[bin]]
name = "whitelabel"
required-features = ["whitelabel"]