[package]
name = "sharder"
version = "0.1.0"
authors = ["rxdn"]
edition = "2018"
default-run = "public"

[dependencies]
cache = { path = "../cache" }
model = { path = "../model" }
common = { path = "../common" }
database = { path = "../database" }
tokio = { version = "1", features = ["full", "time", "sync", "signal"] }
tokio-tungstenite = { version = "0.17", features = ["rustls-tls-webpki-roots"] }
webpki = "0.22"
url = "2.2"
futures = "0.3"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_repr = "0.1"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
deadpool = { version = "0.9", features = ["managed"] }
deadpool-redis = "0.11"
jemallocator = { version = "0.5", optional = true }
mimalloc = { version = "0.1", optional = true }
reqwest = { version = "0.11", features = ["json", "rustls-tls-webpki-roots"] }
flate2 = { version = "1.0", features = ["tokio", "zlib-ng-compat"], default-features = false, optional = true }
envy = "0.4"
sentry = { version = "0.34", features = ["debug-logs", "rustls"], optional = true }
sentry-tracing = { version = "0.34", optional = true }
sentry-panic = { version = "0.34", optional = true }
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = { version = "0.13", optional = true }
lazy_static = { version = "1.4", optional = true }
hyper = { version = "0.14", features = ["server", "http1", "http2"], optional = true }
event-stream = { path = "../event-stream" }

[features]
default = ["use-mimalloc", "skip-initial-guild-creates", "use-sentry", "metrics", "resume-after-identify"]
compression = ["flate2", "reqwest/gzip"]
whitelabel = []
skip-initial-guild-creates = []
use-sentry = ["sentry", "sentry-tracing", "sentry-panic"]
metrics = ["prometheus", "lazy_static", "hyper"]
resume-after-identify = []
use-mimalloc = ["mimalloc"]
use-jemalloc = ["jemallocator"]

[[bin]]
name = "public"

[[bin]]
name = "whitelabel"
required-features = ["whitelabel"]