[package]
name = "vote_listener"
version = "0.1.0"
authors = ["rxdn"]
edition = "2018"

[dependencies]
model = { path = "../model" }
tokio = { version = "~1", features = ["full"] }
axum = "0.5"
hyper = { version = "0.14", features = ["http1", "http2", "server", "runtime", "stream"] }
bb8 = "0.8"
bb8-postgres = "0.8"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
envy = "0.4"
log = "0.4"
env_logger = "0.9"
